opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/delimited_parsing"
bug-reports: "https://github.com/janestreet/delimited_parsing/issues"
dev-repo: "git+https://github.com/janestreet/delimited_parsing.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "core_extended"
  "expect_test_helpers"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Parsing of character (e.g., comma) separated and fixed-width values

Delimited_parsing parses character-separated values (such as CSV files) and fixed-width
records.
"
