opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/delimited_parsing"
bug-reports: "https://github.com/janestreet/delimited_parsing/issues"
dev-repo: "git+https://github.com/janestreet/delimited_parsing.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/delimited_parsing/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "4.08.0"}
  "async"         {>= "v0.15" & < "v0.16"}
  "core"          {>= "v0.15" & < "v0.16"}
  "core_extended" {>= "v0.15" & < "v0.16"}
  "ppx_jane"      {>= "v0.15" & < "v0.16"}
  "dune"          {>= "2.0.0"}
]
synopsis: "Parsing of character (e.g., comma) separated and fixed-width values"
description: "
Delimited_parsing parses character-separated values (such as CSV files) and fixed-width
records.
"
