opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/delimited_parsing"
bug-reports: "https://github.com/janestreet/delimited_parsing/issues"
dev-repo: "git+https://github.com/janestreet/delimited_parsing.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/delimited_parsing/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "core"
  "core_extended"
  "ppx_jane"
  "dune"          {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Parsing of character (e.g., comma) separated and fixed-width values"
description: "
Delimited_parsing parses character-separated values (such as CSV files) and fixed-width
records.
"
